<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipalFragment">

    <Button
        android:id="@+id/buttonSobre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sobre"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="@+id/buttonPesquisa"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonPesquisa"
        app:layout_constraintTop_toBottomOf="@+id/buttonPesquisa" />

    <Button
        android:id="@+id/buttonJogadores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/jogadores"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="@+id/buttonTitulos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonTitulos"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonTitulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/n_mero_de_t_tulos"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonJogadores" />

    <Button
        android:id="@+id/buttonPesquisa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pesquisa"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="@+id/buttonTitulos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonTitulos"
        app:layout_constraintTop_toBottomOf="@+id/buttonTitulos" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="40dp"
        android:text="@string/liga_portuguesa"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="96dp"
        android:text="@string/_2022_2023"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>