<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarJogadorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-181dp">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="90dp"
            android:layout_height="42dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:text="Número"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextId"
            android:layout_width="127dp"
            android:layout_height="48dp"
            android:layout_marginEnd="140dp"
            android:layout_marginRight="140dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Número"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck"
            tools:layout_editor_absoluteY="3dp" />

        <TextView
            android:id="@+id/textView4"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/nome"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="29dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="144dp"
            android:text="@string/data_de_nascimento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextDataNascimento"
            android:layout_width="174dp"
            android:layout_height="49dp"
            android:layout_marginStart="188dp"
            android:layout_marginLeft="188dp"
            android:layout_marginTop="128dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/data_de_nascimento"
            android:inputType="date"
            android:textColorHint="#8D6E63"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="204dp"
            android:text="@string/clube"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="57dp" />

        <EditText
            android:id="@+id/editTextTextClube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="184dp"
            android:layout_marginLeft="184dp"
            android:layout_marginTop="188dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/clube2"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextTextNacionalidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="188dp"
            android:layout_marginLeft="188dp"
            android:layout_marginTop="244dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nacionalidade2"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="312dp"
            android:text="@string/posi_o"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="256dp"
            android:text="@string/nacionalidade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPosicao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="188dp"
            android:layout_marginLeft="188dp"
            android:layout_marginTop="312dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Posicao"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="360dp"
            android:text="@string/altura2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="188dp"
            android:layout_marginLeft="188dp"
            android:layout_marginTop="368dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/altura3"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintBounds" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="432dp"
            android:text="@string/peso2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="188dp"
            android:layout_marginLeft="188dp"
            android:layout_marginTop="424dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/peso3"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintBounds" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="492dp"
            android:text="@string/n_internacionliza_es"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextInternacionalizacoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="492dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/internacionaliza_es2"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="564dp"
            android:text="@string/golos2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextGolos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="556dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/golos3"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintBounds" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="293dp"
            android:layout_height="48dp"
            android:layout_marginStart="108dp"
            android:layout_marginLeft="108dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nome3"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.101"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>